fix layout bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,10 @@
 
 
 body {
-    font-family: 'Unbounded';
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
 a {
